# Resistrack

./: .editorconfig  .gitignore  README.md  ResisTrack_Agent_Rules.md  ResisTrack_PRD.docx  ResisTrack_Roadmap.md  ResisTrack_TechArch.docx  ResisTrack_Workflow_Diagram.html  conftest.py  dataset_research.md  demo.py  docx_content.txt  extract_docx.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.sh
.sisyphus/: handoff.md
artifacts/local_training/: training_report.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx
docs/compliance/: fda_pccp_draft.md  hipaa_checklist.md  model_card.md
infra/: .npmignore  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: resistrack-stack.ts
infra/test/: resistrack.test.ts
logs/: decisions.md
modules/m1_1_aws_infra_baseline/: spec.md
modules/m1_2_hospital_connectivity/: spec.md
modules/m1_3_hl7_fhir_transformer/: spec.md
modules/m1_4_fhir_ingestion_tokenization/: spec.md
modules/m1_5_data_storage_layer/: spec.md
modules/m1_6_audit_logging/: spec.md
modules/m2_2_temporal_features/: spec.md
prompts/: roadmap_impl.md  roadmap_init.md
roadmap/: 00_context.md  01_roadmap.md
tests/: __init__.py  test_auth.py  test_cds.py  test_cicd.py  test_clinicalbert.py  test_ensemble.py  test_feature_engineering.py  test_hl7_fhir_transformer.py  test_inference.py  test_ingestion.py  test_lstm.py  test_mlops.py  test_monitoring.py  test_notifications.py  test_overrides.py  test_reports.py  test_schemas.py  test_temporal.py  test_validation.py  test_xgboost.py
(+98 files in other folders)
