[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resistrack"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "torch>=2.0",
    "transformers>=4.30",
    "fhirclient>=4.0",
    "shap>=0.42",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.5", "ruff>=0.1", "pre-commit>=3.0"]
test = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["src"]
